# monpad

./: .gitignore  Build.hs  LICENSE  README.md  build-windows.sh  build.ps1  build.sh  cabal.project  cabal.project.build  flake.nix  hie.yaml  makefile  run-wasm.sh  windows-cabal-project-hack.hs
client/: elm.json  index.html
client/manual/: js.js  main.css
client/src/: Config.elm  Main.elm  Util.elm
client/src/Auto/: Button.elm  Endpoints.elm  Update.elm
css/: app.css  common.css  login.css  main.css
dhall/: Prelude.dhall  WG.dhall  crowded.dhall  default.dhall  full.dhall  grid.dhall  indicators.dhall  map-layout.dhall  media.dhall  monpad.dhall  mouse-landscape.dhall  mouse.dhall  numpad.dhall  sliders.dhall  textinput.dhall  two-sticks.dhall  void.dhall  voidLayout.dhall
dhall/lib/: all-os.dhall  evdev.dhall  mac.dhall  map-layout.dhall  monpad.dhall  windows.dhall
elm/: elm-analyse.json  elm.json
elm/src/: Binary.elm  Main.elm  Ports.elm  Scratch.elm  Util.elm
elm/src/Auto/: Button.elm  ClientUpdate.elm  Colour.elm  Element.elm  ElmFlags.elm  Encoding.elm  FullElement.elm  Image.elm  Indicator.elm  Input.elm  InputType.elm  IntVec2.elm  Layout.elm  NumberInput.elm  PosX.elm  PosY.elm  ResetLayout.elm  ServerUpdate.elm  Shape.elm  Slider.elm  Stick.elm  TextBox.elm  TextInput.elm  TextShadow.elm  TextStyle.elm  Unit.elm  Update.elm  ViewBox.elm
elm/src/Util/: EncodeBytes.elm  HorribleCrapThatMakesMeThinkMaybeElmIsIndeedWrong.elm  IntVector2.elm  Prog.elm
elm/src/Util/HorribleCrapThatMakesMeThinkMaybeElmIsIndeedWrong/: ListSet.elm
haskell/: cabal.project  cabal.project.freeze  cabal.project.local  hie.yaml  monpad.cabal  server.cabal  web-gamepad.cabal
haskell/app/: Linux.hs  Mac.hs  Main.hs  Util.hs  Utils.hs  Windows.hs
haskell/core/: Orphans.hs
haskell/core/Monpad/: Core.hs  JSON.hs
haskell/core/Monpad/Util/: ShowNewtype.hs
haskell/exe/: Linux.hs
haskell/ext-ws/: Main.hs
haskell/frontend/: Frontend.hs  Main.hs
haskell/json-stdout/: Main.hs
haskell/layout-test/: Main.hs
haskell/linux/: MainOS.hs  OS.hs
haskell/linux/Orphans/: Evdev.hs
haskell/mac/: OS.hs
haskell/rsc/: common.css  default.dhall  elm.js  main.css  main.js
haskell/src/: DhallHack.hs  Embed.hs  GenerateElm.hs  Layout.hs  Monpad.hs  Opts.hs  Server.hs  ServerUpdate.hs  Test.hs  Util.hs  WebGamepad.hs
haskell/src/GenerateElm/: Via.hs
haskell/src/Monpad/: Plugins.hs  Util.hs
haskell/src/Monpad/Plugins/: LayoutSwitcher.hs  Logger.hs  PingIndicator.hs  QR.hs  WatchLayout.hs
haskell/src/Orphans/: Colour.hs  Elm.hs  Generic.hs  Tuple.hs  V2.hs
haskell/src/Orphans/Servant/: Colour.hs
haskell/src/Util/: Elm.hs  Prizm.hs  ShowNewtype.hs
haskell/src/lib/: Elm.hs  Embed.hs  Lib.hs  WebGamepad.hs
haskell/src/lib/Orphans/: Aeson.hs  V2.hs
haskell/src/linux/: Main.hs
haskell/src/test/: Main.hs
haskell/windows/: MainOS.hs  OS.hs
html/: index.html
js/: index.js  main.js
server/: hie.yaml  server.cabal  ws-hs.cabal
server/src/: Embed.hs  Main.hs  Server.hs  Test.hs
server/src/lib/: Server.hs
