cabal-version:       3.4
name:                monpad
version:             0.1.0.0
license:             BSD-3-Clause
author:              George Thomas
maintainer:          georgefsthomas@gmail.com
extra-source-files:
    rsc/common.css
    rsc/login.css
    rsc/app.css
    rsc/elm.js
    rsc/main.js
    rsc/default.dhall

flag release
    Description: Distributable build. Optimise, embed assets etc.
    Default: False
    Manual: True

common common
    if flag(release)
        ghc-options:
            -O3
        cpp-options:
            -DRELEASE
    else
        ghc-options:
            -O0
    ghc-options:
        -Wall
        -threaded
    build-tool-depends:
        record-dot-preprocessor:record-dot-preprocessor ^>= 0.2.5,
    build-depends:
        georgefst-utils,
        base >= 4.14,
        bytestring ^>= 0.10.8,
        composition ^>= 1.0.2.1,
        containers ^>= 0.6.2.1,
        dhall ^>= 1.37,
        directory ^>= 1.3.3,
        extra ^>= 1.7.1,
        filepath ^>= 1.4.2,
        linear ^>= 1.21,
        monad-loops ^>= 0.4.3,
        mtl ^>= 2.2.2,
        optics ^>= 0.4,
        pretty-simple ^>= 4.0,
        random ^>= 1.2.0,
        record-hasfield ^>= 1.0,
        safe ^>= 0.3.19,
        streamly ^>= 0.7.2,
        streams ^>= 3.3,
        text ^>= 1.2.3,
        time ^>= 1.9.3,
        transformers ^>= 0.5.6,
        unordered-containers ^>= 0.2.10,
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        BlockArguments
        ConstraintKinds
        DataKinds
        DeriveAnyClass
        DeriveFunctor
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        EmptyCase
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        MultiParamTypeClasses
        NamedFieldPuns
        NumericUnderscores
        OverloadedLabels
        OverloadedStrings
        PartialTypeSignatures
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeOperators
        ViewPatterns

library
    import:
        common
    exposed-modules:
        Monpad
        Monpad.Plugins
        Monpad.Plugins.LayoutSwitcher
        Monpad.Plugins.Logger
        Monpad.Plugins.PingIndicator
        Monpad.Plugins.QR
        Monpad.Plugins.WatchLayout
    other-modules:
        Test
        Embed
        GenerateElm
        Layout
        Orphans.Elm
        Orphans.Generic
        Orphans.V2
        Util
        Util.Elm
        Util.ShowNewtype
    hs-source-dirs:
        src
    if flag(release)
        build-depends: file-embed ^>= 0.0.11.2
    build-depends:
        aeson ^>= 1.5,
        bifunctors ^>= 5.5.7,
        colour ^>= 2.3.5,
        convertible ^>= 1.1.1,
        deriving-aeson ^>= 0.2.6.1,
        elm-syntax ^>= 0.3.0,
        exceptions ^>= 0.10.4,
        generic-data ^>= 0.9.2,
        generic-functor ^>= 0.2,
        generics-sop ^>= 0.5.0,
        haskell-to-elm ^>= 0.3.1,
        hostname ^>= 1.0,
        http-types ^>= 0.12.3,
        JuicyPixels ^>= 3.3.5,
        lucid ^>= 2.9.12,
        monad-control ^>= 1.0.2.3,
        network ^>= 3.1.1.1,
        prettyprinter ^>= 1.7.0,
        prizm ^>= 3.0.0,
        qrcode-core ^>= 0.9.4,
        qrcode-juicypixels ^>= 0.8.2,
        reducers ^>= 3.12.3,
        servant ^>= 0.18,
        servant-lucid ^>= 0.9.0.1,
        servant-server ^>= 0.18,
        servant-websockets ^>= 2.0,
        streamly-fsnotify ^>= 1.1.1.0,
        transformers-base ^>= 0.4.5.2,
        wai ^>= 3.2.2,
        warp ^>= 3.3.9,
        websockets ^>= 0.12.7,
    other-extensions:
        CPP
        UndecidableInstances

executable monpad
    import:
        common
    main-is:
        Main.hs
    other-modules:
        OS
    if os(windows)
        hs-source-dirs: windows
    if os(linux)
        hs-source-dirs: linux
        other-modules: Orphans.Evdev
        build-depends: evdev ^>= 2.1
    if os(darwin)
        hs-source-dirs: mac
    hs-source-dirs:
        app
    build-depends:
        monpad,
        optparse-applicative ^>= 0.15.1.0,
