cabal-version:       3.4
name:                monpad
version:             0.1.0.0
license:             BSD-3-Clause
author:              George Thomas
maintainer:          georgefsthomas@gmail.com
extra-source-files:
    rsc/common.css
    rsc/login.css
    rsc/app.css
    rsc/elm.js
    rsc/main.js
    rsc/default.dhall

flag release
    Description: Distributable build. Optimise, embed assets etc.
    Default: False
    Manual: True

common common
    if flag(release)
        ghc-options:
            -O3
        cpp-options:
            -DRELEASE
    else
        ghc-options:
            -O0
    ghc-options:
        -Wall
    build-depends:
        georgefst-utils,
        base >= 4.16,
        ansi-terminal ^>= {0.11.1, 1.0, 1.1},
        binary ^>= 0.8.9,
        bytestring ^>= {0.10.8, 0.11, 0.12},
        composition ^>= 1.0.2.1,
        containers ^>= {0.6.2.1, 0.7},
        directory ^>= 1.3.3,
        either ^>= 5.0.1.1,
        extra ^>= {1.7.4, 1.8},
        filepath ^>= {1.4.2, 1.5},
        linear ^>= {1.21, 1.22, 1.23},
        monad-loops ^>= 0.4.3,
        mtl ^>= {2.2.2, 2.3},
        murmur3 ^>= 1.0.5,
        optics ^>= 0.4,
        optics-extra ^>= 0.4,
        pretty-simple ^>= 4.1,
        random ^>= 1.2.0,
        safe ^>= 0.3.19,
        streams ^>= 3.3,
        text ^>= {1.2.3, 1.3, 1.4, 1.5, 2.0, 2.1},
        time ^>= {1.10, 1.11, 1.12, 1.13, 1.14},
        transformers ^>= {0.5.6, 0.6},
        unordered-containers ^>= 0.2.10,
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        BangPatterns
        BlockArguments
        ConstraintKinds
        DataKinds
        DeriveAnyClass
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        EmptyCase
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        ImpredicativeTypes
        LambdaCase
        MultiParamTypeClasses
        NamedFieldPuns
        NoFieldSelectors
        NumericUnderscores
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        PartialTypeSignatures
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeOperators
        ViewPatterns

common core
    build-depends:
        aeson ^>= {1.5, 2.0, 2.1, 2.2},
        colour ^>= 2.3.5,
        deriving-aeson ^>= 0.2.6.1,
        generic-functor ^>= {0.2, 1.1},

-- basically, stuff that's needed for frontend
-- TODO call this `monpad-types` or something?
library monpad-core
    import:
        common,
        core,
    exposed-modules:
        Monpad.Core
        Monpad.JSON
        Monpad.Util.ShowNewtype
        Orphans
    hs-source-dirs:
        core

library
    import:
        common,
        core,
    exposed-modules:
        Monpad
        Monpad.Plugins
        Monpad.Plugins.LayoutSwitcher
        Monpad.Plugins.Logger
        Monpad.Plugins.PingIndicator
        Monpad.Plugins.QR
        Monpad.Plugins.WatchLayout
    other-modules:
        Test
        Embed
        Layout
        Orphans.Colour
        Orphans.Generic
        Orphans.V2
        Util
        Util.Prizm
    hs-source-dirs:
        src
    if flag(release)
        build-depends: file-embed ^>= 0.0.11.2
    build-depends:
        monpad:monpad-core,
        georgefst-utils:streamly-utils,
        bifunctors ^>= {5.5.7, 5.6},
        convertible ^>= 1.1.1,
        dhall ^>= 1.42,
        elm-syntax ^>= 0.3.0,
        exceptions ^>= 0.10.4,
        fsnotify ^>= 0.4,
        generic-data ^>= {0.9.2, 1.1},
        generics-sop ^>= 0.5.0,
        haskell-to-elm ^>= 0.3.1,
        hostname ^>= 1.0,
        http-types ^>= 0.12.3,
        -- TODO this and qrcode libs cause errors for WASM even when in non-built component...
        -- fortunately it's easy to stub out the dependent code (all one file - `Plugins/QR.hs`)
        JuicyPixels ^>= 3.3.5,
        lucid ^>= 2.11,
        monad-control ^>= 1.0.2.3,
        network ^>= {3.1.1.1, 3.2},
        prettyprinter ^>= 1.7.0,
        prizm ^>= 3.0.0,
        -- qrcode-core ^>= 0.9.4,
        -- qrcode-juicypixels ^>= 0.8.2,
        servant ^>= 0.20,
        servant-lucid ^>= 0.9.0.1,
        servant-server ^>= 0.20,
        servant-websockets ^>= 2.0,
        streamly ^>= {0.8, 0.9, 0.10, 0.11},
        streamly-fsnotify ^>= 2.1,
        stm ^>= 2.5,
        transformers-base ^>= 0.4.5.2,
        wai ^>= 3.2.2,
        warp ^>= {3.3.9, 3.4},
        websockets ^>= {0.12.7, 0.13},
    other-extensions:
        CPP
        UndecidableInstances

executable monpad
    import:
        common
    main-is:
        Main.hs
    other-modules:
        OS
    if os(windows)
        hs-source-dirs: windows
    if os(linux)
        hs-source-dirs: linux
        other-modules: Orphans.Evdev
        build-depends: evdev ^>= {2.1, 2.2, 2.3}
    if os(darwin)
        hs-source-dirs: mac
    hs-source-dirs:
        app
    build-depends:
        monpad,
        optparse-applicative ^>= {0.15.1.0, 0.16, 0.17, 0.18},
        -- TODO DRY via a second `common`?
        dhall ^>= 1.42,
        streamly ^>= {0.8, 0.9, 0.10, 0.11},
    ghc-options:
        -threaded

executable frontend
    import:
        common,
        core,
    main-is:
        Main.hs
    other-modules:
        Frontend
    hs-source-dirs:
        frontend
    build-depends:
        -- TODO DRY via `common` section(s) and add bounds
        monpad:monpad-core,
        base,
        aeson,
        containers,
        diagrams-core,
        diagrams-lib,
        diagrams-miso,
        ghc-experimental,
        jsaddle,
        jsaddle-wasm,
        memoize,
        miso,
        mtl,
        random,
        text,
    if arch(wasm32)
        build-depends:
            ghc-experimental,
            jsaddle-wasm,
        ghc-options:
            -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
            -- TODO do we need this?
            -- crashes the build
            -- then again, `threadDelay` isn't working...
            -- -threaded
    else
        build-depends:
            jsaddle-warp,
            wai-app-static,
            warp,
            websockets,
