cabal-version:       2.4
name:                web-gamepad-server
version:             0.1.0.0
license:             BSD-3-Clause
author:              George Thomas
maintainer:          georgefsthomas@gmail.com

common common
  other-modules:       Server
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wno-unused-imports
                       -threaded
  build-depends:       base >= 4.12 && < 5,
                       aeson                ^>= 1.4.7,
                       bytestring           ^>= 0.10.8,
                       directory            ^>= 1.3.3,
                       elm-syntax           ^>= 0.3.0,
                       extra                ^>= 1.7.1,
                       filepath             ^>= 1.4.2,
                       generic-lens         ^>= 2.0.0,
                       generics-sop         ^>= 0.5.0,
                       haskell-to-elm       ^>= 0.3.0,
                       http-types           ^>= 0.12.3,
                       linear               ^>= 1.21,
                       microlens            ^>= 0.4.11,
                       mtl                  ^>= 2.2.2,
                       pretty-simple        ^>= 3.2.2,
                       prettyprinter        ^>= 1.6.1,
                       servant              ^>= 0.17,
                       servant-server       ^>= 0.17,
                       servant-to-elm       ^>= 0.4.1,
                       text                 ^>= 1.2.3,
                       transformers         ^>= 0.5.6,
                       unordered-containers ^>= 0.2.10,
                       wai                  ^>= 3.2.2,
                       wai-cors             ^>= 0.2.7,
                       wai-extra            ^>= 3.0.29,
                       warp                 ^>= 3.3.9,
                       websockets           ^>= 0.12.7,
  default-language:    Haskell2010
  default-extensions:  AllowAmbiguousTypes
                       BlockArguments
                       DataKinds
                       DeriveAnyClass
                       DeriveGeneric
                       DerivingStrategies
                       DerivingVia
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedLabels
                       OverloadedStrings
                       PartialTypeSignatures
                       PolyKinds
                       RankNTypes
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators

executable web-gamepad-test
  import:              common
  main-is:             Test.hs
